--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,59 @@ version: '3.5'
 services:
   db:
     image: 'postgres:latest'
-    container_name: db
+    container_name: uxl-db
     hostname: db_host
     environment:
-      POSTGRES_DB: postgres
+      POSTGRES_DB: uxl-db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
       - '5432:5432'
-    networks:
-      - uxlnet
-    command: ["postgres","-c","max_connections=1500","-c","max_prepared_transactions=64","-c","log_statement=all"]
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    command: postgres -c checkpoint_timeout=600 -c max_wal_size=4096 -c synchronous_commit=0 -c full_page_writes=0
 
-  back:
-    container_name: back
+  back01: &back
     build:
       context: .
       dockerfile: Dockerfile
+    hostname: back01
+    container_name: uxl-back01
     depends_on:
       - db
     environment:
       - 'ASPNETCORE_URLS=http://+:80'
-      - 'ASPNETCORE_ENVIRONMENT=Development'
-      - 'Database__ConnectionString=UserID=postgres;Password=postgres;Host=db_host;Port=5432;Database=uxl-db;Pooling=true;'
+      - 'Database__ConnectionString=UserID=postgres;Password=postgres;Host=db_host;Port=5432;Database=uxl-db;Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true;'
     ports:
       - '5001:80'
-    networks:
-      - uxlnet
+
+  back02:
+    <<: *back
+    hostname: back02
+    container_name: uxl-back02
+    ports:
+      - "5002:80"
+
+  back03:
+    <<: *back
+    hostname: back03
+    container_name: uxl-back03
+    ports:
+      - "5003:80"
+
+  nginx:
+    image: nginx:latest
+    container_name: uxl-nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - back01
+      - back02
+      - back03
+    ports:
+      - "9999:9999"
 
 networks:
-  uxlnet:
+  default:
     driver: bridge
+    name: uxl-net
