--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     command: postgres -c checkpoint_timeout=600 -c max_wal_size=4096 -c synchronous_commit=0 -c full_page_writes=0
+    deploy:
+      resources:
+        limits:
+          cpus: "2.00"
+          memory: "300MB"
 
   back01: &back
     build:
@@ -28,6 +33,11 @@ services:
       - 'Database__ConnectionString=UserID=postgres;Password=postgres;Host=db_host;Port=5432;Database=uxl-db;Minimum Pool Size=10;Maximum Pool Size=10;Multiplexing=true;'
     ports:
       - '5001:80'
+    deploy:
+      resources:
+        limits:
+          cpus: "1.00"
+          memory: "200MB"
 
   back02:
     <<: *back
@@ -54,6 +64,11 @@ services:
       - back03
     ports:
       - "9999:9999"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.50"
+          memory: "100MB"
 
 networks:
   default:
