--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,22 @@
+worker_processes 16;
+
 events {
-    worker_connections 1000;
+    use epoll;
+    multi_accept on;
+    worker_connections 1024;
 }
 
 http {
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_min_length 1024;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types application/json;
+
     access_log off;
     sendfile   on;
     
